samples/_failures_safe/1761432356_de0843_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d84617d9.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d84617d9.c:171:9: error: expected expression at end of input
  171 |         if (isalpha(c))
      |         ^~
./samples/SAFE/__tmp_d84617d9.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d84617d9.c:171:9: error: expected declaration or statement at end of input
